--- a/lecture/lecture.html
+++ b/lecture/lecture.html
@@ -8,18 +8,37 @@
     <link rel="stylesheet" href="./lecture.css">
 </head>
 <body>
+    <header>
+        <div class="head">
+            <h1></h1>
+            <h1 class="title"><a href="../mainPage/main.html">evento</a></h1>
+           <button class="logout_btn"></button>
+        </div>
+    </header>
     <div class="container">
-        <h1>특강 신청</h1>
-        <form>
-            <input type="text" placeholder="특강명">
-            <input type="text" placeholder="주최자">
-            <input type="text" placeholder="장소">
-            <input type="text" placeholder="학년">
-            <input type="number" placeholder="인원">
-            <input type="text" class="des" placeholder="설명">
-            <input type="submit" class="submit">
-        </form>
+        <div class="lecture">
+            
+            <h1>특강 신청</h1>
+            <form>
+                <input type="text" placeholder="특강명" id="title" onkeydown="
+
+                ">
+                <input type="text" placeholder="주최자" id="host">
+                <input type="text" placeholder="장소" id="place">
+                <SELECT NAME=sltSample SIZE=1>
+                    <OPTION selected>학년을 선택해주세요.</OPTION>
+                    <OPTION VALUE=1>1학년</OPTION>
+                    <OPTION VALUE=2>2학년</OPTION>
+                    <OPTION VALUE=3 >3학년</OPTION>
+                </SELECT>
+                <input type="number" placeholder="인원" id="member">
+                <input type="datetime-local" id="date">
+               <textarea  id="des" cols="30" rows="10" placeholder="설명"></textarea>
+                <input type="submit" class="submit" onclick="">
+            </form>
+        </div>
 
     </div>
+    <script src="./lecture.js"></script>
 </body>
 </html>
