--- a/mainPage/main.html
+++ b/mainPage/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./main.css">
     <title>evento</title>
 </head>
-<body>
+<body onresize="onresize()">
     <header>
         <div class="container">
             <h1></h1>
@@ -16,7 +16,7 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container" id="mainCon" style="position:fixed;">
             <div id="lecture" class="card">
                 <a href="../lecture/lecture.html">
                     <img src="../img/undraw_professor_8lrt (1).svg" alt="특강신청">
@@ -37,6 +37,8 @@
                 </a>
             </div>
         </div>
+        
+        <script src="./main.js"></script>
     </main>
 </body>
 </html>
