--- a/lecture/lecture.html
+++ b/lecture/lecture.html
@@ -25,7 +25,7 @@
             <form  name="lectureForm">
                 <input type="text" placeholder="특강명" id="title" name="title" required>
                 <input type="text" placeholder="주최자" id="host" name="host" >
-                <input type="text" placeholder="장소" id="place" name="place" >
+                <input type="text" placeholder="장소" id="place"  >
                 <SELECT name=grade SIZE=1 id="grade">
                     <OPTION selected value=0>학년을 선택해주세요.</OPTION>
                     <OPTION VALUE=1>1학년</OPTION>
