--- a/lecture/lectureList.html
+++ b/lecture/lectureList.html
@@ -22,12 +22,13 @@
             <th>특강명</th>
             <th>주최자</th>
             <th>장소</th>
-        <th>학년</th>
+        <th> 학년</th>
         <th>최대인원</th>
         <th>날짜</th>
         <th>설명</th>
         </table>
 </main>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./lectureList.js"></script>
     
